tree-sitter-renpy/test/corpus/flow.txt
================
Jump
================

jump start

---

(source_file
  (jump
    target: (label_name
      (identifier))))

================
Call
================

call features from _call_features_1

---

(source_file
  (call
    name: (label_name
      (identifier))
    (expression)))
